# rct-platform

./: .env.example  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  404.html  BACKERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  codecov.yml  conftest.py  docker-compose.dev.yml  index.html  mkdocs.yml  patch.diff  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security-scan.yml
algorithms/mee/: index.html
algorithms/moip/: index.html
algorithms/overview/: index.html
algorithms/tier9-autonomy/: index.html
api/control-plane/: index.html
api/microservices/: index.html
architecture/KERNEL_RFC_002_PROCESS_MODEL/: index.html
architecture/KERNEL_RFC_003_SCHEDULER/: index.html
architecture/KERNEL_RFC_004_IPC/: index.html
architecture/KERNEL_RFC_005_SYSCALL/: index.html
architecture/KERNEL_RFC_006_FAULT_ISOLATION/: index.html
architecture/RFC-001-OPEN-JITNA-PROTOCOL-SPECIFICATION/: index.html
architecture/observability/: index.html
benchmark/: 00-MASTER-INDEX-Benchmark-Public.md  FastSlowLane_Benchmark_Cases_v1.jsonl  FastSlowLane_Benchmark_Design_v1.md  MemoryRAG_Benchmark_Cases_v1.jsonl  MemoryRAG_Benchmark_Design_v1.md  MemoryRAG_Benchmark_Report_20251202_Template.md  RCT-Comprehensive-Benchmark-Framework.md  RCT-Comprehensive-Research-Assessment.md  RCT-December-2025-Benchmark-Plan.md  RCT-Executive-Summary-Simulated-Benchmark_PUBLIC.md  RCT-Experiment-Explanation-Complete.md  RCT-Experiment-Scope-Complete.md  RCTLabs_End2End_Benchmark_Cases_v1.jsonl  RCTLabs_End2End_Benchmark_Design_v1.md  RCTLabs_End2End_Benchmark_Report_20251202_Template.md  RCT_Benchmark_Governance_Loop_v1.md  RCT_RealBenchmark_Report_20251202_Template.md  README.md  SignedAI_Evaluator_Spec_FastSlowLane_v1.md  SignedAI_Evaluator_Spec_MemoryRAG_v1.md  SignedAI_Evaluator_Spec_RCTLabs_End2End_v1.md  enterprise_pillars.py  fdia_benchmark.py  run_benchmark.py
benchmark/hallucination-methodology/: index.html
benchmark/methodology/: index.html
changelog/: index.html
community/DISCUSSIONS_STARTER_THREADS/: index.html
community/GITHUB_UI_LAUNCH_CHECKLIST/: index.html
concepts/architecture/: index.html
concepts/fdia/: index.html
concepts/governance/: index.html
concepts/intent-loop/: index.html
concepts/jitna/: index.html
concepts/rct-7-thinking/: index.html
concepts/signedai/: index.html
contracts/: openapi.yaml
contracts/schemas/: common.error.json  kernel.execute.request.json  kernel.execute.response.json  (+2 more)
contributing/: index.html
core/: __init__.py
docs/: MASTER_36_ALGORITHMS_MAPPING_TABLE_2026_01_18.md  REPO_ANALYSIS_PUBLIC_VS_PRIVATE_2026.md  changelog.md  contributing.md  index.md  testing.md
examples/: cli_walkthrough.py  hallucination_demo.py  hexa_core_demo.py  hexa_core_integration_example.py  jitna_demo.py  quickdemo.py  signed_ai_demo.py  simulation_demo.py
notebooks/: rct_playground.ipynb
rct_control_plane/: __init__.py  api.py  cli.py  control_plane_state.py  default_policies.py  dsl_parser.py  execution_graph_ir.py  intent_compiler.py  intent_schema.py  jitna_protocol.py  middleware.py  observability.py  policy_language.py  replay_engine.py  rich_formatter.py  signed_execution.py
scripts/: check_claim_sync.py  create_milestones.py  update_stats_cache.py
search/: search_index.json
signedai/: __init__.py
stylesheets/: rct-brand.css
testing/: index.html
(+158 files in other folders)
