[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rct-platform"
version = "1.0.0a1"
description = "RCT Platform — Constitutional AI Operating System SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "constitutional-ai", "intent-loop", "signedai", "fdia", "rct"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://rctlabs.co"
Repository = "https://github.com/rctlabs/rct-platform"
Documentation = "https://rctlabs.co/docs"
"Bug Tracker" = "https://github.com/rctlabs/rct-platform/issues"

[tool.pytest.ini_options]
testpaths = ["microservices"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --continue-on-collection-errors --import-mode=importlib"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
