[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rct-platform"
version = "1.0.1a0"
description = "RCT Platform — Constitutional AI Operating System SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    {name = "Ittirit Saengow", email = "ittirit720@gmail.com"},
]
maintainers = [
    {name = "RCT Labs", email = "founder@rctlabs.co"},
]
requires-python = ">=3.10"
keywords = ["ai", "constitutional-ai", "intent-loop", "signedai", "fdia", "rct"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "click>=8.1.0",
    "rich>=13.7.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://rctlabs.co"

[project.scripts]
rct = "rct_control_plane.cli:main"
Repository = "https://github.com/rctlabs/rct-platform"
Documentation = "https://rctlabs.co/docs"
"Bug Tracker" = "https://github.com/rctlabs/rct-platform/issues"

[tool.pytest.ini_options]
testpaths = ["microservices", "core/tests", "rct_control_plane/tests", "signedai/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --continue-on-collection-errors --import-mode=importlib"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    "tests/",
    "benchmark/",
    "docs/",
    "examples/",
    "\\.venv.*",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "rct_control_plane.cli"
ignore_errors = true
